<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="senanayake.udayanga.com.babyname.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:text="@string/letter_1"
                android:id="@+id/letter_1"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:text="@string/letter_2" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:text="@string/letter_3" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:text="@string/letter_4" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:text="@string/letter_5" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:text="@string/letter_6" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:text="@string/letter_7" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:text="@string/letter_8" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:text="@string/letter_9" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:text="@string/letter_10" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:text="@string/letter_11" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:text="@string/letter_12" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:text="@string/letter_13" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:text="@string/letter_14" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:text="@string/letter_15" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:text="@string/letter_6" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:text="@string/letter_17" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:text="@string/letter_18" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:text="@string/letter_19" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:text="@string/letter_20" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:text="@string/letter_21" />
        </TableRow>
        <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dip"
            android:text="@string/letter_22" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dip"
            android:text="@string/letter_23" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dip"
            android:text="@string/letter_24" />
    </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:text="@string/letter_25" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:text="@string/letter_26" />
        </TableRow>
        <!--android:gravity="right"-->
    </TableLayout>


    <!--<TableLayout-->
    <!--android:layout_width="368dp"-->
    <!--android:layout_height="495dp"-->
    <!--android:gravity="center"-->
    <!--android:la-->
    <!--android:visibility="visible"-->
    <!--tools:layout_editor_absoluteY="8dp"-->
    <!--app:layout_constraintRight_toRightOf="parent"-->
    <!--app:layout_constraintLeft_toLeftOf="parent"-->
    <!--app:layout_constraintHorizontal_bias="0.5">-->

    <!--<TableRow-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent">-->

    <!--<Button-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:padding="3dip"-->
    <!--android:text="@string/letter_1" />-->

    <!--<Button-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:padding="3dip"-->
    <!--android:text="@string/letter_1" />-->

    <!--<Button-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:padding="3dip"-->
    <!--android:text="@string/letter_1" />-->
    <!--</TableRow>-->
    <!--&lt;!&ndash;android:gravity="right"&ndash;&gt;-->
    <!--<TableRow>-->

    <!--<Button-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:padding="3dip"-->
    <!--android:text="@string/letter_1" />-->

    <!--<Button-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:padding="3dip"-->
    <!--android:text="@string/letter_1" />-->

    <!--<Button-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:padding="3dip"-->
    <!--android:text="@string/letter_1" />-->
    <!--</TableRow>-->

    <!--<TableRow>-->

    <!--<Button-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:padding="3dip"-->
    <!--android:text="@string/letter_1" />-->

    <!--<Button-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:padding="3dip"-->
    <!--android:text="@string/letter_1" />-->

    <!--<Button-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:padding="3dip"-->
    <!--android:text="@string/letter_1" />-->


    <!--</TableRow>-->
    <!--</TableLayout>-->


</android.support.constraint.ConstraintLayout>
